...
            onDismiss={handleBottomSheetDismiss}
        >
            <NativeWindBottomSheetView
                className="bg-white dark:bg-daf-surface-dark"
                testID={
                    bottomSheetIsPresented
                        ? 'selected-place-sheet-presented'
                        : undefined
                }
            >
                {selectedSearchResult ? (
                    <BottomSheetScrollView
                        showsVerticalScrollIndicator={false}
...
                                disabled={
                                    selectedPlaceIsLoading ||
                                    !selectedPlaceDetails?.location
                                }
                                icon="navigation"
                                onPress={handleGetDirectionsToSelectedPlace}
                                testID="selected-place-get-directions-button"
                            >
                                Directions
                            </DafButton>
                            <DafIconButton
                                accessibilityHint={
                                    selectedPlaceIsFavorite
...
